--- a/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
@@ -46,8 +46,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div>
+        <main role="main" class="p-3">
             @RenderBody()
         </main>
     </div>
