--- a/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,6 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Bag" asp-action="Index"><i class="fas fa-shopping-bag"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,12 +31,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Pedidos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+                        </li>
 
                         @if (ClienteSessao.Logado.UsuarioId > 0)
                         {
                             <li class="nav-item">
-                                <a href="/Login/Logoff">
-                                    <span>Sair</span>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logoff">
+                                    Sair
                                 </a>
                             </li>
                         }
