--- a/ChurchStore.Web/Views/Shared/_Layout.cshtml
+++ b/ChurchStore.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/ChurchStore.Web.styles.css" asp-append-version="true" />
 
 
+    <script src="/js/site.js"></script>
     <script src="/lib/bootstrap/dist/js/jquery-3.6.0.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap2.js"></script>
     <script src="/lib/bootstrap/dist/js/jquery.mask-min.js"></script>
@@ -37,12 +38,30 @@
                         @if (ClienteSessao.Logado.UsuarioId > 0)
                         {
                             <li class="nav-item">
-                                <a href="/Login/Logoff">
-                                    <span>Sair</span>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logoff">
+                                    Sair
                                 </a>
                             </li>
                         }
                     </ul>
+                    <button class="mode-toggle" id="toggleButton">Ativar Modo Escuro</button>
+                    <div class="dropdown">
+                        <div class="dropdown-button"><i class="fas fa-cog"></i></div>
+                        <div class="dropdown-content">
+                            <a href="#"><i class="fas fa-moon"></i> Escuro</a>
+                            <a href="#"><i class="fas fa-sun"></i> Claro</a>
+                            <a href="#"><i class="fas fa-cog"></i> Sistema</a>
+                            <div class="dropdown-submenu">
+                                <a href="#">Submenu</a>
+                                <div class="submenu-content">
+                                    <a href="#">Subopção 1</a>
+                                    <a href="#">Subopção 2</a>
+                                    <a href="#">Subopção 3</a>
+                                </div>
+                            </div>
+                            <a href="#">Opção 3</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -201,6 +220,33 @@
     $("#modalJsPromptValor").on("keydown", function (e) {
         if (e.which == 13) {
             $('#modalJsPromptOk').click();
+        }
+    });
+
+    const toggleButton = document.getElementById('toggleButton');
+
+    // Função para aplicar o modo escuro baseado no localStorage
+    function applyTheme() {
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-mode');
+            toggleButton.textContent = 'Desativar Modo Escuro';
+        } else {
+            document.body.classList.remove('dark-mode');
+            toggleButton.textContent = 'Ativar Modo Escuro';
+        }
+    }
+
+    // Chama a função para aplicar o tema ao carregar a página
+    applyTheme();
+
+    toggleButton.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+        if (document.body.classList.contains('dark-mode')) {
+            localStorage.setItem('theme', 'dark');
+            toggleButton.textContent = 'Desativar Modo Escuro';
+        } else {
+            localStorage.removeItem('theme');
+            toggleButton.textContent = 'Ativar Modo Escuro';
         }
     });
 </script>
