--- a/ChurchStore.Web/wwwroot/css/home.css
+++ b/ChurchStore.Web/wwwroot/css/home.css
@@ -1,32 +1,12 @@
-﻿:root {
-    --primary-100: #f4f4f5;
-    --primary-200: #0d6efd;
-    --primary-300: #0d6efd;
-    --primary-400: #0d6efd;
-    --primary-500: #0d6efd;
-    --primary-600: #0d6efd;
-    --primary-700: #3f3f46;
-    --primary-800: #0d6efd;
-    --primary-900: #0d6efd;
-    --secondary-100: #0d6efd;
-    --secondary-200: #0d6efd;
-    --secondary-300: #0d6efd;
-    --secondary-400: #0d6efd;
-    --secondary-500: #0d6efd;
-    --secondary-600: #0d6efd;
-    --secondary-700: #0d6efd;
-    --secondary-800: #0d6efd;
-    --secondary-900: #0d6efd;
-}
-
+﻿
 .containerProduto {
     display: grid;
-    grid-template: '1fr';
-    gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
 }
 
 .produto {
-    background: var(--primary-100);
+    background: var(--secondary-100);
     display: flex;
     flex-direction: column;
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -55,25 +35,28 @@
 .produto .containerDados .informacoes {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .produto .containerDados .informacoes .nome{
-    flex: 1 1 auto;
+    flex: 1 1;
     font-weight: 600;
-    color: var(--primary-700);
+    color: var(--primary-900);
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 .produto .containerDados .informacoes .valor{
     font-weight: 600;
-    color: var(--primary-700);
+    color: var(--primary-900);
 }
 
 .produto .containerDados .informacoes .quantidade {
     width: 100%;
     flex: none;
     font-weight: 500;
-    color: var(--primary-700);
-    margin-top: 0.5rem;
+    color: var(--primary-900);
+    margin: 0.5rem 0;
 }
 
 .produto .containerDados .reservas {
@@ -97,13 +80,20 @@
 }
 
 .produto .containerDados .reservasFlex .unidades .controleUnidades {
-    background: var(--secondary-400);
-    padding: 1rem;
+    background: var(--primary-500);
+    color: var(--primary-50);
+    padding: 0.75rem 1rem;
     border-radius: 0.25rem;
+    cursor: pointer;
 }
 
 .produto .containerDados .reservasFlex .unidades .quantidadeProdutosSelecionados {
-    width: 4rem;
+    width: 70px;
+    background: var(--primary-500);
+    color: var(--primary-50);
+    text-align: center;
+    border: none;
+    border-radius: 3px;
 }
 
 @media (min-width: 374px){
