--- a/ChurchStore.Web/wwwroot/css/bag.css
+++ b/ChurchStore.Web/wwwroot/css/bag.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
-    background-color: #f5f5f5;
+    background-color: var(--secondary-100);
     color: #333;
     border-radius: 0.375rem;
     overflow: hidden;
@@ -177,26 +177,4 @@
     border-radius: 0.375rem;
     border: 1px solid #6b7280;
     color: #374151;
-}
-
-@media (prefers-color-scheme: dark) {
-    .product-card {
-        background-color: #262626;
-    }
-
-    .delete-icon {
-        color: #d1d5db;
-    }
-
-    .product-name {
-        color: #d1d5db;
-    }
-
-    .product-price, .product-total {
-        color: #d1d5db;
-    }
-
-    .product-total {
-        border-color: #d1d5db;
-    }
 }
