--- a/ChurchStore.Web/wwwroot/css/site.css
+++ b/ChurchStore.Web/wwwroot/css/site.css
@@ -99,14 +99,14 @@ body {
 
 }
 
-.dropdown-content a {
+.dropdown-content div {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content a:hover {
+.dropdown-content div:hover {
     background-color: #f1f1f1;
 }
 
