--- a/ChurchStore.Web/Views/Home/Index.cshtml
+++ b/ChurchStore.Web/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         </div>
     }
 
-    <div style="width: 100vw; padding: 1rem; background: #fff; border-top: 1px solid #333; position: fixed; bottom: 0px; right: 0px; display: flex; justify-content: space-around">
+    <div class="ValorReserva">
         <div>
             Total Pedido: <span id="total"></span>
         </div>
