--- a/ChurchStore.Web/Views/Shared/_Layout.cshtml
+++ b/ChurchStore.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Bag" asp-action="Index"><i class="fas fa-shopping-bag"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -32,13 +32,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
              
                         @if (ClienteSessao.Logado.UsuarioId > 0)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logoff">
+                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Logoff">
                                     Sair
                                 </a>
                             </li>
@@ -166,7 +166,6 @@
             }
         });
     };
-
 
     //Model genérico para confirmar operações
     var JsConfirm = function (callback, optionalLabel) {
