--- a/ChurchStore.Web/wwwroot/css/bag.css
+++ b/ChurchStore.Web/wwwroot/css/bag.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
-    background-color: var(--secondary-100);
-    color: #333;
+    background-color: var(--surface-200);
+    color: var(--color);
     border-radius: 0.375rem;
     overflow: hidden;
     position: relative;
@@ -84,9 +84,9 @@
     color: #f5f5f5;
 }
 
-    .delete-icon:hover {
-        background-color: #991b1b;
-    }
+.delete-icon:hover {
+    background-color: #991b1b;
+}
 
 .product-details {
     flex: auto;
@@ -108,7 +108,6 @@
     flex: auto;
     font-size: 1rem;
     font-weight: 600;
-    color: #111827;
 }
 
 @media (min-width: 640px) {
@@ -126,7 +125,6 @@
 .product-price {
     font-size: 1rem;
     font-weight: 600;
-    color: #4b5563;
 }
 
 @media (min-width: 640px) {
@@ -149,8 +147,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #6b7280;
-    color: #f5f5f5;
+    background-color: var(--surface-400);
 }
 
 @media (min-width: 640px) {
@@ -175,6 +172,5 @@
     justify-content: center;
     padding: 0.5rem;
     border-radius: 0.375rem;
-    border: 1px solid #6b7280;
-    color: #374151;
+    border: 1px solid var(--surface-400);
 }
