--- a/ChurchStore.Web/wwwroot/css/home.css
+++ b/ChurchStore.Web/wwwroot/css/home.css
@@ -6,7 +6,7 @@
 }
 
 .produto {
-    background: var(--secondary-100);
+    background: var(--surface-200);
     display: flex;
     flex-direction: column;
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -41,21 +41,21 @@
 .produto .containerDados .informacoes .nome{
     flex: 1 1;
     font-weight: 600;
-    color: var(--primary-900);
+    color: var(--color);
     font-size: 1.5rem;
     margin: 0;
 }
 
-.produto .containerDados .informacoes .valor{
+.produto .containerDados .informacoes .valor {
     font-weight: 600;
-    color: var(--primary-900);
+    color: var(--color);
 }
 
 .produto .containerDados .informacoes .quantidade {
     width: 100%;
     flex: none;
     font-weight: 500;
-    color: var(--primary-900);
+    color: var(--color);
     margin: 0.5rem 0;
 }
 
@@ -77,26 +77,48 @@
 .produto .containerDados .reservasFlex .unidades {
     display: flex;
     gap: 0.5rem;
+    font-weight: 600;
 }
 
 .produto .containerDados .reservasFlex .unidades .controleUnidades {
-    background: var(--primary-500);
-    color: var(--primary-50);
+    background: var(--primary);
+    color: var(--color);
     padding: 0.75rem 1rem;
     border-radius: 0.25rem;
+    font-weight: 600;
     cursor: pointer;
 }
 
 .produto .containerDados .reservasFlex .unidades .quantidadeProdutosSelecionados {
     width: 70px;
-    background: var(--primary-500);
-    color: var(--primary-50);
+    background: var(--primary);
+    color: var(--color);
     text-align: center;
     border: none;
     border-radius: 3px;
 }
 
-@media (min-width: 374px){
+.ValorReserva {
+    width: 100vw;
+    padding: 1rem;
+    background: var(--surface-200);
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.ValorReserva button {
+    border: none;
+    border-radius: 3px;
+    background: var(--primary);
+    color: var(--color);
+    padding: 0.5rem 1rem;
+}
+
+@media (min-width: 374px) {
     .produto {
         flex-direction: row;
     }
