--- a/ChurchStore.Web/wwwroot/css/site.css
+++ b/ChurchStore.Web/wwwroot/css/site.css
@@ -1,55 +1,52 @@
 :root {
-    --primary-50: #F7F6FC;
-    --primary-100: #E6E4F7;
-    --primary-200: #D6D2F2;
-    --primary-300: #BDB7EB;
-    --primary-400: #A49BE3;
-    --primary-500: #594ACC;
-    --primary-600: #433899;
-    --primary-700: #312970;
-    --primary-800: #241E52;
-    --primary-900: #161333;
-    --primary-950: #0D0B1F;
-    --secondary-50: #F9F9F9;
-    --secondary-100: #ECECEC;
-    --secondary-200: #DFDFDF;
-    --secondary-300: #CBCBCB;
-    --secondary-400: #B8B8B8;
-    --secondary-500: #7E7E7E;
-    --secondary-600: #5F5F5F;
-    --secondary-700: #454545;
-    --secondary-800: #323232;
-    --secondary-900: #202020;
-    --secondary-950: #131313;
+    --primary: #594acc;
+    --primary-200: #6f5dd2;
+    --primary-400: #8370d8;
+    --primary-600: #9683de;
+    --primary-800: #a997e4;
+    --primary-1000: #bbabea;
+    --surface: #ffffff;
+    --surface-200: #DADADA;
+    --surface-400: #aaaaaa;
+    --surface-600: #9c9c9c;
+    --surface-800: #8f8f8f;
+    --surface-1000: #828282;
+    --mixed: #1a1822;
+    --mixed-200: #2f2d37;
+    --mixed-400: #46444d;
+    --mixed-600: #5d5b64;
+    --mixed-800: #76747c;
+    --mixed-1000: #908f94;
+    --color: #000000;
 }
 
 .dark-mode {
-    --primary-50: #FFF2F2;
-    --primary-100: #FFD9D9;
-    --primary-200: #FFBFBF;
-    --primary-300: #FF9999;
-    --primary-400: #FF7373;
-    --primary-500: #FF0000;
-    --primary-600: #BF0000;
-    --primary-700: #8C0000;
-    --primary-800: #660000;
-    --primary-900: #400000;
-    --primary-950: #260000;
-    --secondary-50: #F2FFF2;
-    --secondary-100: #D9FFD9;
-    --secondary-200: #BFFFBF;
-    --secondary-300: #99FF99;
-    --secondary-400: #73FF73;
-    --secondary-500: #00FF00;
-    --secondary-600: #00BF00;
-    --secondary-700: #008C00;
-    --secondary-800: #006600;
-    --secondary-900: #004000;
-    --secondary-950: #002600;
+    --primary: #594acc;
+    --primary-200: #6f5dd2;
+    --primary-400: #8370d8;
+    --primary-600: #9683de;
+    --primary-800: #a997e4;
+    --primary-1000: #bbabea;
+    --surface: #121212;
+    --surface-200: #282828;
+    --surface-400: #3f3f3f;
+    --surface-600: #575757;
+    --surface-800: #717171;
+    --surface-1000: #8b8b8b;
+    --mixed: #1a1822;
+    --mixed-200: #2f2d37;
+    --mixed-400: #46444d;
+    --mixed-600: #5d5b64;
+    --mixed-800: #76747c;
+    --mixed-1000: #908f94;
+
+    --color: #fff;
 }
 
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -62,13 +59,10 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: var(--surface);
+    color: var(--color);
 }
 
 * {
@@ -77,6 +71,18 @@ body {
     box-sizing: border-box;
 }
 
+
+nav {
+    background: var(--surface-200);
+}
+
+nav a {
+    color: var(--color);
+}
+
+nav a:hover {
+    color: var(--primary);
+}
 
 /* Estilos básicos para o dropdown */
 .dropdown {
