--- a/ChurchStore.WebAdmin/Views/Home/Index.cshtml
+++ b/ChurchStore.WebAdmin/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
 <div class="modal" id="modalPedidoInfo" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-light">
+            <div class="modal-header">
                 <h5 class="modal-title">Atenção!</h5>
 
             </div>
