--- a/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/ChurchStore.WebAdmin/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +44,13 @@
                             </li>
                         }
                     </ul>
+                    <div class="dropdown">
+                        <div class="dropdown-button"><i class="fas fa-cog"></i></div>
+                        <div class="dropdown-content">
+                            <div id="dark"><i class="fas fa-moon"></i> Escuro</div>
+                            <div id="light"><i class="fas fa-sun"></i> Claro</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -62,7 +69,7 @@
 <div class="modal" id="modalJsAlert" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-light">
+            <div class="modal-header">
                 <h5 class="modal-title">Atenção!</h5>
 
             </div>
@@ -80,7 +87,7 @@
 <div class="modal" id="modalJsConfirm" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-light">
+            <div class="modal-header">
                 <h5 class="modal-title">Confirmação</h5>
 
             </div>
@@ -99,7 +106,7 @@
 <div class="modal" id="modalJsPrompt" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-light">
+            <div class="modal-header">
                 <h5 class="modal-title" id="">
                     Prompt
                 </h5>
@@ -204,4 +211,27 @@
             $('#modalJsPromptOk').click();
         }
     });
+
+    $("#dark").click(function () {
+        document.body.classList.add('dark-mode');
+        localStorage.setItem('theme', 'dark');
+
+    })
+    $("#light").click(function () {
+        document.body.classList.remove('dark-mode');
+        localStorage.removeItem('theme');
+    })
+
+
+    // Função para aplicar o modo escuro baseado no localStorage
+    function applyTheme() {
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-mode');
+        } else {
+            document.body.classList.remove('dark-mode');
+        }
+    }
+
+    // Chama a função para aplicar o tema ao carregar a página
+    applyTheme();
 </script>
