--- a/ChurchStore.WebAdmin/wwwroot/css/pedidos.css
+++ b/ChurchStore.WebAdmin/wwwroot/css/pedidos.css
@@ -1,12 +1,1 @@
-﻿.header-pedidos {
-    border-top: 1px solid #eee;
-    margin-bottom: 1rem;
-}
-
-.header-pedido {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-    padding: 1rem 0;
-}
+﻿
