--- a/ChurchStore.WebAdmin/wwwroot/css/site.css
+++ b/ChurchStore.WebAdmin/wwwroot/css/site.css
@@ -1,24 +1,148 @@
+:root {
+    --primary: #594acc;
+    --primary-200: #6f5dd2;
+    --primary-400: #8370d8;
+    --primary-600: #9683de;
+    --primary-800: #a997e4;
+    --primary-1000: #bbabea;
+    --surface: #ffffff;
+    --surface-200: #DADADA;
+    --surface-400: #aaaaaa;
+    --surface-600: #9c9c9c;
+    --surface-800: #8f8f8f;
+    --surface-1000: #828282;
+    --mixed: #1a1822;
+    --mixed-200: #2f2d37;
+    --mixed-400: #46444d;
+    --mixed-600: #5d5b64;
+    --mixed-800: #76747c;
+    --mixed-1000: #908f94;
+    --color: #000000;
+    --table-border: #dee2e6;
+}
+
+.dark-mode {
+    --primary: #594acc;
+    --primary-200: #6f5dd2;
+    --primary-400: #8370d8;
+    --primary-600: #9683de;
+    --primary-800: #a997e4;
+    --primary-1000: #bbabea;
+    --surface: #121212;
+    --surface-200: #282828;
+    --surface-400: #3f3f3f;
+    --surface-600: #575757;
+    --surface-800: #717171;
+    --surface-1000: #8b8b8b;
+    --mixed: #1a1822;
+    --mixed-200: #2f2d37;
+    --mixed-400: #46444d;
+    --mixed-600: #5d5b64;
+    --mixed-800: #76747c;
+    --mixed-1000: #908f94;
+    --color: #fff;
+    --table-border: #282828;
+}
+
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: var(--surface);
+    color: var(--color);
+}
+
+
+
+nav {
+    background: var(--surface-200);
+}
+
+nav a {
+    color: var(--color);
+}
+
+nav a:hover {
+    color: var(--primary);
+}
+
+.modal-content {
+    background: var(--surface-200)
+}
+
+/* Estilos básicos para o dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    border: 2px solid #eee;
+    border-radius: 3px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 160px;
+    right: 0; /* Alinha o menu principal à direita */
+}
+
+    .dropdown-content div {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content div:hover {
+            background-color: #f1f1f1;
+        }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Estilos para o submenu */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .submenu-content {
+    display: none;
+    position: absolute;
+    right: 100%; /* Posiciona o submenu à esquerda */
+    top: 0;
+    min-width: 160px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-submenu:hover .submenu-content {
+    display: block;
 }
 
 .Pendente {
