--- a/ChurchStore.WebAdmin/wwwroot/lib/bootstrap/bootstrap.css
+++ b/ChurchStore.WebAdmin/wwwroot/lib/bootstrap/bootstrap.css
@@ -1661,23 +1661,23 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: var(--color);
 }
 
 .table th,
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #dee2e6;
+  border-top: 1px solid var(--table-border);
 }
 
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
+  border-bottom: 2px solid var(--table-border);
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #dee2e6;
+  border-top: 2px solid var(--table-border);
 }
 
 .table-sm th,
@@ -1686,12 +1686,12 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--table-border);
 }
 
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--table-border);
 }
 
 .table-bordered thead th,
@@ -1707,11 +1707,11 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
+    background-color: #2c3034;
 }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: var(--primary);
   background-color: rgba(0, 0, 0, 0.075);
 }
 
